# uc-intg-manager

./: .gitignore  CHANGELOG.md  driver.json  pyproject.toml  requirements.txt  test-requirements.txt
.github/workflows/: build.yml
config/: system_messages.json
dev/: build-install-bootstrapper.sh  build-install-manager.sh
intg-bootstrapper/: const.py  device.py  driver.json  driver.py  github_api.py  setup.py  sync_api.py
intg-manager/: backup_service.py  const.py  data_migration.py  device.py  driver.py  github_api.py  integration_service.py  notification_manager.py  notification_service.py  notification_settings.py  registry.json  remote_api.py  setup.py  sync_api.py  system_messages.py  web_server.py
intg-manager/templates/: available.html  base.html  diagnostics.html  index.html  integration_logs.html  integrations.html  logs.html  notifications.html  settings.html  system_messages.html  updating.html
intg-manager/templates/partials/: available_card.html  available_list.html  integration_card.html  integration_detail.html  integration_list.html  integration_log_entries.html  log_entries.html  modal.html  modal_clear_logs.html  modal_delete_backup.html  modal_delete_confirm.html  modal_delete_ir_codeset.html  modal_release_notes.html  modal_update_no_backup.html  modal_version_selector.html  orphaned_entities.html  orphaned_ir_codesets.html  remote_selector_dropdown.html  status_message.html  (+1 more)
intg-manager/tests/: test_const.py  test_data_migration.py  test_notification_settings.py  test_system_messages.py  test_version_compare.py
