[project]
name = "uc-intg-manager"
version = "1.5.3"
description = "Unfolded Circle Integration Manager - Web interface for managing custom integrations"
readme = "README.md"
requires-python = ">=3.11"
license = "MPL-2.0"

authors = [
    { name = "Jack Powell", email = "jackjpowell@gmail.com" }
]

urls.Homepage = "https://github.com/JackJPowell/uc-intg-manager"
urls.Repository = "https://github.com/JackJPowell/uc-intg-manager"

dependencies = [
    # Core dependencies
    "ucapi==0.5.2",
    "ucapi-framework==1.9.0",
    "pyee>=9.0",
    # Web framework
    "flask>=3.0.0",
    "werkzeug>=3.0.0",
    # HTTP client
    "aiohttp>=3.9.0",
    "requests>=2.32.5",
    "packaging>=25.0",
    "markdown>=3.5.0"
]
